--- a/src/app/views/game/game.html
+++ b/src/app/views/game/game.html
@@ -1,11 +1,11 @@
 <section class="game">
   <section class="game-title">
-    <h2>
+    <h2 i18n="@@gameTitle">
       <fa-icon [icon]="gamepad"></fa-icon>
       Game Title
     </h2>
   </section>
-  <section class="game-description">
+  <section class="game-description" i18n="@@gameDescription">
     Game Description
   </section>
 </section>
