Corrección sobre plantilla game

--- a/src/app/views/game/game.html
+++ b/src/app/views/game/game.html
@@ -2,10 +2,10 @@
   <section class="game-title">
     <h2 i18n="@@gameTitle">
       <fa-icon [icon]="gamepad"></fa-icon>
-      Game Title
+      Título de juego
     </h2>
   </section>
   <section class="game-description" i18n="@@gameDescription">
-    Game Description
+    Descripción de juego
   </section>
 </section>
